@@ -1,5 +1,10 @@
 2013-11-07  Bin Cheng  <bin.cheng@arm.com>
 
+	* tree-ssa-loop-ivopts.c (get_shiftadd_cost): Check equality
+	using operand_equal_p.
+
+2013-11-07  Bin Cheng  <bin.cheng@arm.com>
+
 	* tree-ssa-loop-ivopts.c (alloc_iv): Lower address expressions.
 	* tree-affine.c (get_inner_reference_aff): Return base.
 	* tree-affine.h (get_inner_reference_aff): Change prototype.
